--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -911,5 +911,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<true/>
 </dict>
 </plist>
