--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -62,12 +62,14 @@ android {
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
         minSdkVersion 21
         targetSdkVersion 34
-        versionCode 4202
-        versionName '6.0.19'
+        versionCode 4203
+        versionName '6.1.0'
     }
 
     buildTypes {
         release {
+            minifyEnabled false
+            shrinkResources false
             signingConfig signingConfigs.release
         }
     }
