--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,11 +54,10 @@ dependencies:
   url_launcher: ^6.3.0
   shared_preferences: ^2.3.0
   package_info_plus: ^8.0.1
-  firebase_crashlytics: ^4.0.4
-  firebase_core: ^3.3.0
   yandex_mobileads: ^7.1.0
   json_annotation: ^4.9.0
   image_picker: ^1.1.2
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
